[package]
name = "rust-async-interop"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
axum = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
nm = { git = "https://github.com/balena-io-modules/libnm-rs.git" }
glib = { git = "https://github.com/gtk-rs/gtk-rs-core" }
